--- a/CA2Sep20/app/src/main/res/drawable/toggle_favorite.xml
+++ b/CA2Sep20/app/src/main/res/drawable/toggle_favorite.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android" tools:ignore="ExtraText">
+    <item android:drawable="@drawable/favorite_button_pressed" android:state_pressed="true"/>"
     <item android:drawable="@drawable/ic_star_border_hollow" android:state_checked="false"/>"
-    <item android:drawable="@drawable/ic_star_border_filled" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_star_border_filled" android:state_checked="true"/>"
 </selector>
